# QZmView

./: CMakeLists.txt  GridEditPage.qml  GridSettingsPage.qml  GridWindow.qml  IconFont.js  MonitorDelegate.qml  MonitorDetailPage.qml  MonitorListPage.qml  README.md  SettingsPage.qml  gridlistmodel.cpp  gridlistmodel.h  main.cpp  main.qml  monitorlistmodel.cpp  monitorlistmodel.h  qml.qrc  qzmmonitor.cpp  qzmmonitor.h  qzmsettings.cpp  qzmsettings.h  win32res.rc  zmapi.cpp  zmapi.h  zmmonitor.cpp  zmmonitor.h  zmtoken.cpp  zmtoken.h
cmake/: windeployqt.cmake
